hphp/test/slow/coeffects/rx/invalid_disabled_flag.hhas.expectf
Fatal error: Assembler Error: line 4: isRxDisabled on non-rx func in %s/invalid_disabled_flag.hhas on line -1
